# dify-official-plugins

models/customized_openai_api_compatible/: README.md  manifest.yaml  pyproject.toml
models/customized_openai_api_compatible/models/llm/: llm.py
models/customized_openai_api_compatible/provider/: customized_openai_api_compatible.py  customized_openai_api_compatible.yaml
models/customized_openai_api_compatible/readme/: README_zh_Hans.md
