[project]
name = "customized_openai_api_compatible"
version = "0.0.1"
description = "customized openai api with headers and multiple choice"
readme = "README.md"
requires-python = ">=3.12"

# Refresh the lockfile with: uv lock
dependencies = [
    "dify_plugin>=0.9.0",
    "httpx>=0.28.1",
    "openai>=2.38.0",
    "requests>=2.34.2",
    "setuptools>=82.0.1",
    "tiktoken>=0.13.0",
]

# uv run black . -C -l 100
# uv run ruff check --fix
[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
